# formateur-ia-generative

./: .eslintrc.cjs  .gitignore  README.md  alembic.ini  index.html  main.py  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 34f21bc937f5_create_user_course_slide_tables.py
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: chat.py  courses.py  slides.py
app/application/services/: chat_service.py  course_service.py  slide_service.py
app/core/: db_users.py  models.py  schemas.py
app/core/ports/: course_repository.py  llm_service.py  slide_repository.py
app/infrastructure/db/: session.py
app/infrastructure/db/repositories/: course_repository.py  slide_repository.py
app/infrastructure/services/: simulated_llm_service.py
my-frontend/: package-lock.json  package.json
my-frontend-app/: package-lock.json  package.json
my-frontend/src/routes/: +layout.svelte  +page.svelte
my-frontend/src/routes/course/[courseId]/slide/[slideId]/: +page.svelte
src/lib/components/: SlideNavigation.svelte
src/lib/components/chat/: ChatInterface.svelte
src/lib/components/slides/: SlideNavigation.svelte  SlideViewer.svelte
src/lib/components/slides/templates/: ContentTemplate.svelte  MenuTemplate.svelte  TitleTemplate.svelte
src/lib/stores/: courseStore.js
src/routes/: +layout.svelte  +page.svelte
src/routes/course/[courseId]/slide/[slideId]/: +page.svelte
